ingress/kong/konga.yml
apiVersion: v1
kind: Service
metadata:
  name: konga
  namespace: kong
  labels:
    app: konga
spec:
  ports:
  - port: 1337
  selector:
    app: konga
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga-admin
  namespace: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: konga
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
      - name: konga
        image: pantsel/konga:0.14.9
        ports:
        - containerPort: 1337
          protocol: TCP
