ingress/kong/kong-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "http"
spec:
  rules:
  - host: example.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: example
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ssl
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
spec:
  rules:
  - host: example.demo.local
    http:
      paths:
      - path: /
        backend:
          serviceName: example
          servicePort: 80
  tls:
  - hosts:
    - api-mc-point.wemall-dev.com
    secretName: acm-wemall-dev
